packages/uow-core/main/default/objects/UoWPolicySetting__mdt/UoWPolicySetting__mdt.object-meta.xml
<CustomObject>
    <description>Policy configuration for Unit of Work. Links policies to configurations with execution order and enabled flag. Policies evaluate transactions and can allow, deny, or require approval before execution.</description>
    <label>UoW Policy Setting</label>
    <pluralLabel>UoW Policy Settings</pluralLabel>
</CustomObject>