packages/uow-core/main/default/objects/UoWPolicySetting__mdt/fields/PolicyClassName__c.field-meta.xml
<CustomField>
    <fullName>PolicyClassName__c</fullName>
    <label>Policy Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>