packages/uow-core/main/default/objects/UoWPolicySetting__mdt/fields/Settings__c.field-meta.xml
<CustomField>
    <fullName>Settings__c</fullName>
    <description>Policy-specific settings in JSON format (key-value pairs). Example: {&quot;riskThreshold&quot;: 75, &quot;requireApproval&quot;: true}</description>
    <label>Settings (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>