packages/uow-core/main/default/objects/UoWPolicySetting__mdt/listViews/AllPolicySettings.listView-meta.xml
<ListView>
    <fullName>AllPolicySettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Configuration__c</columns>
    <columns>PolicyClassName__c</columns>
    <columns>IsEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>